Added dynmic badge

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <link href="css/smart_wizard_theme_dots.css" rel="stylesheet" type="text/css" />
     <link href="css/jquery.lineProgressbar.min.css" rel="stylesheet" />
     <link href="css/mdb.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link href="css/swiper.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
