--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
     <script src="components/adidasCartHome/adidasCartHome.js"></script>
     <script src="components/vp0Home/vp01home.js"></script>
     <script src="components/adidasItemCreateHome/adidasItemCreateHome.js"></script>
-
+    <script src="components/adidasTransferHome/adidasTransferHome.js"></script>
     <script src="components/vp1Home/vp02home.js"></script>
     <script src="components/vp2Home/vp03home.js"></script>
     <script src="components/vp3Home/vp04home.js"></script>
