--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://kendo.cdn.telerik.com/2018.3.1017/styles/kendo.nova.min.css" rel="stylesheet" />
     <link href="https://kendo.cdn.telerik.com/2018.3.1017/styles/kendo.mobile.all.min.css" rel="stylesheet">
 
-    
+
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/material-dashboard.css?v=1.3.0" rel="stylesheet" />
     <link href="css/smart_wizard.css" rel="stylesheet" type="text/css" />
@@ -27,11 +27,13 @@
     <link href="css/swiper.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <style>
 
+        .swal-wide{
+            width: 950px !important;
+        }
         #counter {
         width: 4em;
         height: 4em;
@@ -198,7 +200,7 @@
     <!--  Charts Plugin, full documentation here: https://gionkunz.github.io/chartist-js/ -->
     <script src="js/chartist.min.js"></script>
 
-    
+
 
     <!--  Notifications Plugin, full documentation here: http://bootstrap-notify.remabledesigns.com/    -->
     <script src="js/bootstrap-notify.js"></script>
