--- a/public/index.html
+++ b/public/index.html
@@ -238,6 +238,8 @@
     <script src="js/jquery.timeago.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/mdb.min.js"></script>
+    <script src="js/jquery.qrcode.js"></script>
+    <script src="js/qrcode.js"></script>
     <script src="app.js"></script>
     <script src="components/home/home.js"></script>
     <script src="components/adminHome/admin.js"></script>
