--- a/public/index.html
+++ b/public/index.html
@@ -243,15 +243,11 @@
     <script src="app.js"></script>
     <script src="components/home/home.js"></script>
     <script src="components/adminHome/admin.js"></script>
+    <script src="components/trace/trace.js"></script>
     <script src="components/adidasCartHome/adidasCartHome.js"></script>
-    <script src="components/vp0Home/vp01home.js"></script>
     <script src="components/adidasItemCreateHome/adidasItemCreateHome.js"></script>
     <script src="components/adidasTransferHome/adidasTransferHome.js"></script>
     <script src="components/adidasDesignerHome/adidasDesignerHome.js"></script>
-    <script src="components/vp1Home/vp02home.js"></script>
-    <script src="components/vp2Home/vp03home.js"></script>
-    <script src="components/vp3Home/vp04home.js"></script>
-    <script src="components/createcattle/createcattle.js"></script>
 </body>
 
 </html>
